--- a/readthedocsext/theme/templates/organizations/settings/saml.html
+++ b/readthedocsext/theme/templates/organizations/settings/saml.html
@@ -18,32 +18,32 @@
   {% if sso_integration %}
     <div class="ui basic segment">
       <div class="ui message">
-        <div class="header">
-          {% trans "Invite new users into your organization" %}
-        </div>
-        <p>
-          {% trans "You can invite people to join your organization by sending them this link:" %}
-        </p>
+        <div class="header">{% trans "Invite new users into your organization" %}</div>
+        <p>{% trans "You can invite people to join your organization by sending them this link:" %}</p>
 
         <div class="ui fluid action input">
-          <input type="text" readonly id="rtd-saml-login-url" value="{{ rtd_saml_login_url }}" />
-          <button class="ui teal right icon button" data-clipboard-target="#rtd-saml-login-url">
+          <input type="text"
+                 readonly
+                 id="rtd-saml-login-url"
+                 value="{{ rtd_saml_login_url }}" />
+          <button class="ui right icon button"
+                  data-clipboard-target="#rtd-saml-login-url">
             <i class="fas fa-copy icon"></i>
           </button>
         </div>
       </div>
 
       <div class="ui message">
-        <div class="header">
-          {% trans "Invite existing users into your organization" %}
-        </div>
-        <p>
-          {% trans "You can invite existing users to join your organization by sending them this link:" %}
-        </p>
+        <div class="header">{% trans "Invite existing users into your organization" %}</div>
+        <p>{% trans "You can invite existing users to join your organization by sending them this link:" %}</p>
 
         <div class="ui fluid action input">
-          <input type="text" readonly id="rtd-saml-connect-url" value="{{ rtd_saml_connect_url }}" />
-          <button class="ui teal right icon button" data-clipboard-target="#rtd-saml-connect-url">
+          <input type="text"
+                 readonly
+                 id="rtd-saml-connect-url"
+                 value="{{ rtd_saml_connect_url }}" />
+          <button class="ui right icon button"
+                  data-clipboard-target="#rtd-saml-connect-url">
             <i class="fas fa-copy icon"></i>
           </button>
         </div>
@@ -52,9 +52,7 @@
   {% endif %}
 
   <div class="ui basic segment">
-    <h3>
-      {% trans "Configure your SAML provider" %}
-    </h3>
+    <h3>{% trans "Configure your SAML provider" %}</h3>
 
     <p>
       {% blocktrans %}
@@ -66,27 +64,39 @@
       <div class="field">
         <label>{% trans "Single sign-on URL" %}</label>
         <div class="ui fluid action input">
-          <input type="text" value="{{ rtd_saml_sso_url }}" id="saml-sso-url" readonly=true>
-          <button class="ui teal right icon button" data-clipboard-target="input#saml-sso-url">
-            <i class="fa-solid fa-copy icon"></i>
+          <input type="text"
+                 value="{{ rtd_saml_sso_url }}"
+                 id="saml-sso-url"
+                 readonly="true">
+          <button class="ui right icon button"
+                  data-clipboard-target="input#saml-sso-url">
+            <i class="fas fa-copy icon"></i>
           </button>
         </div>
       </div>
       <div class="field">
         <label>{% trans "Audience URI (SP entity ID)" %}</label>
         <div class="ui fluid action input">
-          <input type="text" value="{{ rtd_saml_sp_url }}" id="saml-sp-url" readonly=true>
-          <button class="ui teal right icon button" data-clipboard-target="input#saml-sp-url">
-            <i class="fa-solid fa-copy icon"></i>
+          <input type="text"
+                 value="{{ rtd_saml_sp_url }}"
+                 id="saml-sp-url"
+                 readonly="true">
+          <button class="ui right icon button"
+                  data-clipboard-target="input#saml-sp-url">
+            <i class="fas fa-copy icon"></i>
           </button>
         </div>
       </div>
       <div class="field">
         <label>{% trans "Name ID format" %}</label>
         <div class="ui fluid action input">
-          <input type="text" value="EmailAddress" id="saml-name-id-format" readonly=true>
-          <button class="ui teal right icon button" data-clipboard-target="input#saml-name-id-format">
-            <i class="fa-solid fa-copy icon"></i>
+          <input type="text"
+                 value="EmailAddress"
+                 id="saml-name-id-format"
+                 readonly="true">
+          <button class="ui right icon button"
+                  data-clipboard-target="input#saml-name-id-format">
+            <i class="fas fa-copy icon"></i>
           </button>
         </div>
       </div>
@@ -95,14 +105,15 @@
 
   {% if sso_integration %}
     <div class="ui basic segment">
-      <h3>
-        {% trans "SAML integration details" %}
-      </h3>
+      <h3>{% trans "SAML integration details" %}</h3>
 
-      <form class="ui form" method="POST" action=".">
+      <form class="ui form" method="post" action=".">
         {% csrf_token %}
         {{ form | crispy }}
-        <input class="ui submit primary button" type="submit" name="submit" value="{% trans "Update" %}" />
+        <input class="ui submit primary button"
+               type="submit"
+               name="submit"
+               value="{% trans "Update" %}" />
       </form>
 
       <div class="ui form">
@@ -133,17 +144,18 @@
       </div>
     </div>
   {% elif not sso_saml_enabled %}
-    {% include 'organizations/includes/feature_disabled.html' with organization=organization %}
+    {% include "organizations/includes/feature_disabled.html" with organization=organization %}
   {% else %}
     <div class="ui padded">
-      <h3>
-        {% trans "Create SAML integration" %}
-      </h3>
+      <h3>{% trans "Create SAML integration" %}</h3>
 
-      <form class="ui form" method="POST" action=".">
+      <form class="ui form" method="post" action=".">
         {% csrf_token %}
         {{ form | crispy }}
-        <input class="ui submit primary button" type="submit" name="submit" value="{% trans "Create" %}" />
+        <input class="ui submit primary button"
+               type="submit"
+               name="submit"
+               value="{% trans "Create" %}" />
       </form>
     </div>
   {% endif %}
