Use `target="_blank"` for external links
This is based on a feedback we received from a user.
As a general rule, we should use `target=_blank` for all the links that go
_outside_ the dashboard.

--- a/readthedocsext/theme/templates/builds/build_detail.html
+++ b/readthedocsext/theme/templates/builds/build_detail.html
@@ -155,6 +155,7 @@
           class="disabled item"
           data-bind="css: {disabled: !can_view_docs()}, attr: {href: docs_url}"
           aria-label="{{ text_view_docs }}"
+          target="_blank"
           title="{{ text_view_docs }}">
           <i class="fa-duotone fa-book icon"></i>
           {% trans "View docs" %}
