--- a/readthedocsext/theme/templates/homepage.html
+++ b/readthedocsext/theme/templates/homepage.html
@@ -106,6 +106,7 @@
   <div class="ui inverted segment basic center aligned very padded">
     <div class="ui container">
       <a href="https://docs.readthedocs.io/page/intro/getting-started-with-sphinx.html"
+         target="_blank"
          class="ui button primary">{% trans 'Getting started guide' %}</a>
     </div>
   </div>
@@ -183,9 +184,9 @@
         {% blocktrans trimmed %}
           Read the Docs is <strong>community supported</strong>.
           It depends on users like you to contribute to development, support, and operations.
-          You can learn more about how to <a href="https://docs.readthedocs.io/page/contribute.html">contribute</a> in our
+          You can learn more about how to <a href="https://docs.readthedocs.io/page/contribute.html" target="_blank">contribute</a> in our
           docs.
-          Thanks so much to our wonderful <a href="https://docs.readthedocs.io/page/team.html">community team</a> who helps us
+          Thanks so much to our wonderful <a href="https://docs.readthedocs.io/page/team.html" target="_blank">community team</a> who helps us
           run the site.
           Read the Docs wouldn't be possible without them.
         {% endblocktrans %}
@@ -193,7 +194,7 @@
 
       <p>
         {% blocktrans trimmed %}
-          Hosting for the project is graciously provided by <a href="https://azure.microsoft.com/">Microsoft Azure</a>.
+          Hosting for the project is graciously provided by <a href="https://aws.amazon.com/" target="_blank">AWS</a>.
         {% endblocktrans %}
       </p>
     </div>
