--- a/readthedocsext/theme/templates/profiles/partials/token_list.html
+++ b/readthedocsext/theme/templates/profiles/partials/token_list.html
@@ -35,7 +35,8 @@
 {% endblock list_placeholder_header %}
 {% block list_placeholder_text %}
   <a class="ui button" href="https://docs.readthedocs.io/page/api/v3.html#token"
-     aria-label="{% trans "Learn more about API tokens in our documentation" %}">
+     aria-label="{% trans "Learn more about API tokens in our documentation" %}"
+     target="_blank">
     {% trans "Learn more" %}
   </a>
 {% endblock list_placeholder_text %}
