--- a/readthedocsext/theme/templates/profiles/private/advertising_profile.html
+++ b/readthedocsext/theme/templates/profiles/private/advertising_profile.html
@@ -29,7 +29,7 @@
       For more details on advertising on Read the Docs
       including the privacy protections we have in place for users
       and community advertising we run on behalf of the open source community,
-      see <a href="https://docs.readthedocs.io/page/advertising/ethical-advertising.html">our documentation</a>.
+      see <a href="https://docs.readthedocs.io/page/advertising/ethical-advertising.html" target="_blank">our documentation</a>.
     {% endblocktrans %}
   </p>
 
