--- a/readthedocsext/theme/templates/projects/integration_webhook_detail.html
+++ b/readthedocsext/theme/templates/projects/integration_webhook_detail.html
@@ -117,7 +117,7 @@
     <p>
       {% blocktrans trimmed %}
         For more information on manually configuring a webhook, refer to
-        <a href="https://docs.readthedocs.io/page/webhooks.html">our webhook documentation.</a>
+        <a href="https://docs.readthedocs.io/page/webhooks.html" target="_blank">our webhook documentation.</a>
       {% endblocktrans %}
     </p>
   {% endif %}
