--- a/readthedocsext/theme/templates/projects/onboard_import.html
+++ b/readthedocsext/theme/templates/projects/onboard_import.html
@@ -10,14 +10,14 @@
         {% blocktrans trimmed %}
           You don't have any projects yet, but you can start building documentation by importing one.
           Not sure how to start documenting your project?
-          Check out the <a href="{{ getting_started_url }}">Getting Started Guide</a> to learn how.
+          Check out the <a href="{{ getting_started_url }}" target="_blank">Getting Started Guide</a> to learn how.
         {% endblocktrans %}
       </p>
 
       <p>
         {% url "projects_import_demo" as import_demo_url %}
         {% blocktrans trimmed %}
-          Want to try a demo? <a href="{{ import_demo_url }}">Import our own demo project</a>.
+          Want to try a demo? <a href="{{ import_demo_url }}" target="_blank">Import our own demo project</a>.
         {% endblocktrans %}
       </p>
 
