--- a/readthedocsext/theme/templates/projects/partials/edit/automation_rule_list.html
+++ b/readthedocsext/theme/templates/projects/partials/edit/automation_rule_list.html
@@ -33,6 +33,7 @@
 {% endblock list_placeholder_header %}
 {% block list_placeholder_text %}
   <a class="ui button"
+     target="_blank"
      href="https://docs.readthedocs.io/page/automation-rules.html">{% trans "Learn more" %}</a>.
 {% endblock list_placeholder_text %}
 
