--- a/readthedocsext/theme/templates/projects/partials/edit/domain_list.html
+++ b/readthedocsext/theme/templates/projects/partials/edit/domain_list.html
@@ -46,6 +46,7 @@
 {% endblock list_placeholder_header %}
 {% block list_placeholder_text %}
   <a class="ui button" href="https://docs.readthedocs.io/page/guides/custom-domains.html"
+     target="_blank"
      aria-label="{% trans "Learn more about custom domains in our documentation" %}">
     {% trans "Learn more" %}
   </a>
