--- a/readthedocsext/theme/templates/projects/partials/edit/environment_variable_list.html
+++ b/readthedocsext/theme/templates/projects/partials/edit/environment_variable_list.html
@@ -32,7 +32,8 @@
 {% endblock list_placeholder_header %}
 {% block list_placeholder_text %}
   <a class="ui button" href="https://docs.readthedocs.io/page/guides/environment-variables.html"
-     aria-label="{% trans "Learn more about user-defined environment variables in our documentation" %}">
+     aria-label="{% trans "Learn more about user-defined environment variables in our documentation" %}"
+     target="_blank">
     {% trans "Learn more" %}
   </a>
 {% endblock list_placeholder_text %}
