--- a/readthedocsext/theme/templates/projects/partials/project_create_automatic.html
+++ b/readthedocsext/theme/templates/projects/partials/project_create_automatic.html
@@ -210,7 +210,7 @@
                     {% endblocktrans %}
                   </p>
                   <p class="ui red text" data-bind="visible: !admin">
-                    <a class="ui red mini basic button" href="https://docs.readthedocs.io/page/intro/import-guide.html#manually-import-your-docs">
+                    <a class="ui red mini basic button" href="https://docs.readthedocs.io/page/intro/import-guide.html#manually-import-your-docs" target="_blank">
                       {% trans "Learn how to manually configure this repository" %}
                     </a>
                   </p>
