--- a/readthedocsext/theme/templates/socialaccount/partials/social_account_list.html
+++ b/readthedocsext/theme/templates/socialaccount/partials/social_account_list.html
@@ -38,7 +38,8 @@
 {% block list_placeholder_text %}
   <a class="ui button"
      href="https://docs.readthedocs.io/en/stable/guides/connecting-git-account.html"
-     aria-label="{% trans "Learn more about this feature in our documentation pages" %}">{% trans "Learn more" %}</a>
+     aria-label="{% trans "Learn more about this feature in our documentation pages" %}"
+     target="_blank">{% trans "Learn more" %}</a>
 {% endblock list_placeholder_text %}
 
 {% block list_item_right_menu %}
