--- a/readthedocsext/theme/templates/support/success.html
+++ b/readthedocsext/theme/templates/support/success.html
@@ -21,7 +21,7 @@
   <p>
     {% blocktrans trimmed with url="https://docs.readthedocs.io/en/latest/index.html#step-by-step-guides" %}
       While you are waiting for a response,
-      you might want to browse <a href="{{ url }}">our guides</a>,
+      you might want to browse <a href="{{ url }}" target="_blank">our guides</a>,
       which provide step-by-step solutions to common support questions.
     {% endblocktrans %}
   </p>
