--- a/readthedocsext/theme/templates/account/signup.html
+++ b/readthedocsext/theme/templates/account/signup.html
@@ -45,7 +45,7 @@
 {% block authentication_extra %}
   <p class="ui center aligned tiny basic vertically fitted basic cleared segment">
     {% blocktrans trimmed %}
-      By signing up for an account, you agree to our <a href="https://docs.readthedocs.io/page/terms-of-service.html">Terms of Service</a> and <a href="https://docs.readthedocs.io/page/privacy-policy.html">Privacy Policy</a>.
+      By signing up for an account, you agree to our <a href="https://docs.readthedocs.io/page/terms-of-service.html" target="_blank">Terms of Service</a> and <a href="https://docs.readthedocs.io/page/privacy-policy.html">Privacy Policy</a>.
     {% endblocktrans %}
   </p>
 {% endblock authentication_extra %}
