--- a/readthedocsext/theme/templates/projects/partials/edit/integration_list.html
+++ b/readthedocsext/theme/templates/projects/partials/edit/integration_list.html
@@ -29,6 +29,7 @@
 {% endblock list_placeholder_header %}
 {% block list_placeholder_text %}
   <a class="ui button" href="https://docs.readthedocs.io/en/stable/guides/setup/git-repo-manual.html"
+     target="_blank"
      aria-label="{% trans "Learn more about connecting your Git provider in our documentation" %}">
     {% trans "Learn more" %}
   </a>
