--- a/readthedocsext/theme/templates/projects/partials/edit/traffic_list.html
+++ b/readthedocsext/theme/templates/projects/partials/edit/traffic_list.html
@@ -46,7 +46,8 @@
 {% endblock list_placeholder_header %}
 {% block list_placeholder_text %}
   <a class="ui button" href="https://docs.readthedocs.io/en/stable/analytics.html"
-     aria-label="{% trans "Learn more about traffic analytics in our documentation" %}">
+     aria-label="{% trans "Learn more about traffic analytics in our documentation" %}"
+     target="_blank">
     {% trans "Learn more" %}
   </a>
 {% endblock list_placeholder_text %}
