--- a/readthedocsext/theme/templates/projects/partials/edit/translation_list.html
+++ b/readthedocsext/theme/templates/projects/partials/edit/translation_list.html
@@ -31,7 +31,8 @@
 {% endblock list_placeholder_header %}
 {% block list_placeholder_text %}
   <a class="ui button" href="https://docs.readthedocs.io/page/localization.html"
-     aria-label="{% trans "Learn more about this feature in our documentation pages" %}">
+     aria-label="{% trans "Learn more about this feature in our documentation pages" %}"
+      target="_blank">
     {% trans "Learn more" %}
   </a>
 {% endblock list_placeholder_text %}
