--- a/readthedocsext/theme/templates/support/index.html
+++ b/readthedocsext/theme/templates/support/index.html
@@ -38,7 +38,7 @@
       <p>
         If you have an issue with the actual functioning of the site,
         you can file bug reports on our <a href="https://github.com/readthedocs/readthedocs.org/issues">GitHub issue tracker</a>.
-        You can also <a href="http://docs.readthedocs.io/page/contribute.html">contribute</a> to Read the Docs,
+        You can also <a href="http://docs.readthedocs.io/page/contribute.html" target="_blank">contribute</a> to Read the Docs,
         as the code is open source.
       </p>
 
