Fix import on base template

--- a/readthedocsext/theme/templates/base.html
+++ b/readthedocsext/theme/templates/base.html
@@ -1,5 +1,5 @@
 {% load static from static %}
-{% load webpack_static get_webpack_static debug_enabled from ext_theme_tags %}
+{% load webpack_static get_webpack_static_prefix debug_enabled from ext_theme_tags %}
 
 <!DOCTYPE html>
 <html lang="en">
