--- a/readthedocsext/theme/templates/errors/dashboard/5xx.html
+++ b/readthedocsext/theme/templates/errors/dashboard/5xx.html
@@ -2,20 +2,31 @@
 
 {# The dashboard 5xx page, shows like it is part of the application #}
 
-{% load core_tags %}
-{% load i18n %}
+{% load blocktrans trans from i18n %}
 
-{% block title %}{% trans "Server error" %}{% endblock %}
+{% block title %}
+  {% trans "Server error" %}
+{% endblock title %}
 
-{% block error_status %}500{% endblock %}
+{% block error_status %}
+  500
+{% endblock error_status %}
 {% block error_title %}
   {% trans "Something went wrong" %}
 {% endblock error_title %}
 
-{% block error_icon_computer_name %}fa-fire fa-swap-opacity{% endblock %}
-{% block error_icon_mobile_name %}fa-fire fa-swap-opacity{% endblock %}
-{% block error_icon_computer_style %}--fa-primary-color: red; --fa-secondary-color: orangered;{% endblock %}
-{% block error_icon_mobile_style %}--fa-primary-color: red; --fa-secondary-color: orangered;{% endblock %}
+{% block error_icon_computer_name %}
+  fa-fire fa-swap-opacity
+{% endblock error_icon_computer_name %}
+{% block error_icon_mobile_name %}
+  fa-fire fa-swap-opacity
+{% endblock error_icon_mobile_name %}
+{% block error_icon_computer_style %}
+  --fa-primary-color: red; --fa-secondary-color: orangered;
+{% endblock error_icon_computer_style %}
+{% block error_icon_mobile_style %}
+  --fa-primary-color: red; --fa-secondary-color: orangered;
+{% endblock error_icon_mobile_style %}
 
 {% block error_content %}
   <p>
