--- a/readthedocsext/theme/templates/errors/dashboard/410.html
+++ b/readthedocsext/theme/templates/errors/dashboard/410.html
@@ -1,20 +1,31 @@
 {% extends "errors/dashboard/base.html" %}
 
-{% load core_tags %}
-{% load i18n %}
+{% load blocktrans trans from i18n %}
 
-{% block title %}{% trans "Project unavailable" %}{% endblock %}
+{% block title %}
+  {% trans "Project unavailable" %}
+{% endblock title %}
 
-{% block error_status %}410{% endblock %}
+{% block error_status %}
+  410
+{% endblock error_status %}
 {% block error_title %}
   {{ block.super }}
   {% trans "Project unavailable" %}
 {% endblock error_title %}
 
-{% block error_icon_computer_name %}fa-cloud-slash{% endblock %}
-{% block error_icon_mobile_name %}fa-cloud-slash{% endblock %}
-{% block error_icon_computer_style %}--fa-primary-color: orangered;{% endblock %}
-{% block error_icon_mobile_style %}--fa-primary-color: orangered;{% endblock %}
+{% block error_icon_computer_name %}
+  fa-cloud-slash
+{% endblock error_icon_computer_name %}
+{% block error_icon_mobile_name %}
+  fa-cloud-slash
+{% endblock error_icon_mobile_name %}
+{% block error_icon_computer_style %}
+  --fa-primary-color: orangered;
+{% endblock error_icon_computer_style %}
+{% block error_icon_mobile_style %}
+  --fa-primary-color: orangered;
+{% endblock error_icon_mobile_style %}
 
 {% block error_content %}
   <p>
