--- a/readthedocsext/theme/templates/errors/dashboard/429.html
+++ b/readthedocsext/theme/templates/errors/dashboard/429.html
@@ -1,20 +1,31 @@
 {% extends "errors/dashboard/base.html" %}
 
-{% load core_tags %}
-{% load i18n %}
+{% load blocktrans trans from i18n %}
 
-{% block title %}{% trans "Too many requests" %}{% endblock %}
+{% block title %}
+  {% trans "Too many requests" %}
+{% endblock title %}
 
-{% block error_status %}429{% endblock %}
+{% block error_status %}
+  429
+{% endblock error_status %}
 {% block error_title %}
   {{ block.super }}
   {% trans "Too many requests" %}
 {% endblock error_title %}
 
-{% block error_icon_computer_name %}fa-turtle fa-swap-opacity{% endblock %}
-{% block error_icon_mobile_name %}fa-turtle fa-swap-opacity{% endblock %}
-{% block error_icon_computer_style %}--fa-primary-color: palegreen; --fa-secondary-color: palegreen;{% endblock %}
-{% block error_icon_mobile_style %}--fa-primary-color: palegreen; --fa-secondary-color: palegreen;{% endblock %}
+{% block error_icon_computer_name %}
+  fa-turtle fa-swap-opacity
+{% endblock error_icon_computer_name %}
+{% block error_icon_mobile_name %}
+  fa-turtle fa-swap-opacity
+{% endblock error_icon_mobile_name %}
+{% block error_icon_computer_style %}
+  --fa-primary-color: palegreen; --fa-secondary-color: palegreen;
+{% endblock error_icon_computer_style %}
+{% block error_icon_mobile_style %}
+  --fa-primary-color: palegreen; --fa-secondary-color: palegreen;
+{% endblock error_icon_mobile_style %}
 
 {% block error_content %}
   <p>
