--- a/readthedocsext/theme/templates/errors/proxito/404/base.html
+++ b/readthedocsext/theme/templates/errors/proxito/404/base.html
@@ -1,21 +1,18 @@
 {% extends "errors/proxito/base.html" %}
 
-{% load static %}
-{% load core_tags %}
-{% load i18n %}
+{% load blocktrans trans from i18n %}
 
-{% block title %}{% trans "Page not found" %}{% endblock %}
+{% block title %}
+  {% trans "Page not found" %}
+{% endblock title %}
 
-{% block error_status %}404{% endblock %}
+{% block error_status %}
+  404
+{% endblock error_status %}
 {% block error_title %}
   {{ block.super }}
   {% trans "Page not found" %}
 {% endblock error_title %}
-
-{% block error_icon_computer_name %}fa-radar{% endblock %}
-{% block error_icon_mobile_name %}fa-radar{% endblock %}
-{% block error_icon_computer_style %}--fa-primary-color: greenyellow;{% endblock %}
-{% block error_icon_mobile_style %}--fa-primary-color: greenyellow;{% endblock %}
 
 {% block error_content %}
   <p>
