Tune error page copy for documentation sites

--- a/readthedocsext/theme/templates/errors/dashboard/4xx.html
+++ b/readthedocsext/theme/templates/errors/dashboard/4xx.html
@@ -25,7 +25,7 @@
 
 {% block error_content %}
   <p>
-    {% blocktrans trimmed with url_support=url_support %}
+    {% blocktrans trimmed %}
       Your request is either unsupported or we didn't understand it.
     {% endblocktrans %}
   </p>
