--- a/readthedocsext/theme/templates/errors/proxito/404/base.html
+++ b/readthedocsext/theme/templates/errors/proxito/404/base.html
@@ -2,8 +2,17 @@
 
 {% load blocktrans trans from i18n %}
 
+{% comment %}
+  This view uses the contextual 404 view handlers currently, but mostly just to
+  get the name of the object that is missing so we can give a more specific
+  error message. Options here are "Project not found", "Version not found", and
+  "Page not found".
+{% endcomment %}
+
 {% block title %}
-  {% trans "Page not found" %}
+  {% blocktrans trimmed with resource=not_found_subject|default:"Page"|capfirst %}
+    {{ resource }} not found
+  {% endblocktrans %}
 {% endblock title %}
 
 {% block error_status %}
@@ -11,13 +20,16 @@
 {% endblock error_status %}
 {% block error_title %}
   {{ block.super }}
-  {% trans "Page not found" %}
+  {% blocktrans trimmed with resource=not_found_subject|default:"Page"|capfirst %}
+    {{ resource }} not found
+  {% endblocktrans %}
 {% endblock error_title %}
 
 {% block error_content %}
   <p>
-    {% blocktrans trimmed %}
-      The page you requested may no longer exist, may have been moved, or the project may have been deleted.
+    {% blocktrans trimmed with resource=not_found_subject|default:"Page"|lower %}
+      There was a problem with your request.
+      The {{ resource }} you requested may no longer exist or may have been removed.
     {% endblocktrans %}
   </p>
 {% endblock error_content %}
