Only use a home link on pages where it makes sense
Don't put a home link on "project not found" error page, for example.

--- a/readthedocsext/theme/templates/errors/proxito/410.html
+++ b/readthedocsext/theme/templates/errors/proxito/410.html
@@ -29,5 +29,7 @@
       Please <a href="{{ url_support }}">contact us</a> if you think this is a mistake.
     {% endblocktrans %}
   </p>
-  {{ block.super }}
 {% endblock error_content_help %}
+
+{% block content_extra_link %}
+{% endblock content_extra_link %}
