--- a/readthedocsext/theme/templates/errors/proxito/429.html
+++ b/readthedocsext/theme/templates/errors/proxito/429.html
@@ -28,5 +28,7 @@
       Wait several minutes before trying your request again.
     {% endblocktrans %}
   </p>
-  {{ block.super }}
 {% endblock error_content_help %}
+
+{% block content_extra_link %}
+{% endblock content_extra_link %}
