--- a/readthedocsext/theme/templates/errors/proxito/5xx.html
+++ b/readthedocsext/theme/templates/errors/proxito/5xx.html
@@ -15,6 +15,7 @@
   500
 {% endblock error_status %}
 {% block error_title %}
+  {{ block.super }}
   {% trans "Something went wrong" %}
 {% endblock error_title %}
 
