--- a/readthedocsext/theme/templates/errors/proxito/404/dns.html
+++ b/readthedocsext/theme/templates/errors/proxito/404/dns.html
@@ -18,3 +18,6 @@
     {% endblocktrans %}
   </p>
 {% endblock error_content_help %}
+
+{% block content_extra_link %}
+{% endblock content_extra_link %}
