--- a/readthedocsext/theme/templates/errors/proxito/base.html
+++ b/readthedocsext/theme/templates/errors/proxito/base.html
@@ -4,22 +4,27 @@
 {% load trans from i18n %}
 
 {% block content_extra_text %}
-  <div class="left floated">
-    {# djlint: off D018 #}
-    <a class="item" href="/">{% trans "Home" %}</a>
-    {# djlint: on #}
-  </div>
-  <div class="right floated">
-    {% trans "Hosted by" %}
-    {# djlint: off D018 #}
-    <a href="//{{ PRODUCTION_DOMAIN }}/" aria-label="Read the Docs homepage">
-      <img class="ui image"
-           src="{% static 'readthedocsext/theme/images/logo-wordmark-dark.svg' %}"
-           width="160"
-           alt="Read the Docs logo" />
-    </a>
-    {# djlint: on #}
-  </div>
+  {% block content_extra_link %}
+    <div class="left floated">
+      {# djlint: off D018 #}
+      {# Translators: this refers to going to the home page of a doc site #}
+      <a href="/">{% trans "Home" %}</a>
+      {# djlint: on #}
+    </div>
+  {% endblock content_extra_link %}
+  {% block content_extra_logo %}
+    <div class="right floated">
+      {% trans "Hosted by" %}
+      {# djlint: off D018 #}
+      <a href="//{{ PRODUCTION_DOMAIN }}/" aria-label="Read the Docs homepage">
+        <img class="ui image"
+             src="{% static 'readthedocsext/theme/images/logo-wordmark-dark.svg' %}"
+             width="160"
+             alt="Read the Docs logo" />
+      </a>
+      {# djlint: on #}
+    </div>
+  {% endblock content_extra_logo %}
 {% endblock content_extra_text %}
 
 {% block content_title_text %}
